--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "@hebilicious/vue-query-nuxt": "^0.3.0",
+    "@nuxt/kit": "^3.12.4",
     "@nuxt/ui": "^2.18.2",
+    "@sidebase/nuxt-auth": "^0.8.1",
     "@tanstack/vue-query": "^5.51.15",
     "ky": "^1.5.0",
     "nuxt": "^3.12.4",
+    "nuxt-auth-utils": "^0.3.2",
     "tailwindcss": "^3.4.7",
-    "vue": "latest"
+    "vue": "latest",
+    "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
   "devDependencies": {
