--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "start": "node .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "lint": "eslint \"**/*.ts\" --fix"
   },
@@ -16,6 +17,9 @@
     "@nuxt/ui": "^2.18.2",
     "@sidebase/nuxt-auth": "^0.8.1",
     "@tanstack/vue-query": "^5.51.15",
+    "@vueuse/core": "^11.0.1",
+    "@vueuse/nuxt": "^11.0.1",
+    "@vueuse/router": "^11.0.1",
     "ky": "^1.5.0",
     "nuxt": "^3.12.4",
     "nuxt-auth-utils": "^0.3.2",
@@ -25,6 +29,7 @@
   },
   "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
   "devDependencies": {
+    "@iconify-json/fa-brands": "^1.1.9",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.42.0",
