--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-auth-utils": "^0.3.4",
     "tailwindcss": "^3.4.10",
     "vue": "latest",
+    "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
