--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ky": "^1.7.1",
     "nuxt": "^3.13.0",
     "nuxt-auth-utils": "^0.3.4",
+    "nuxt-seo-utils": "^6.0.8",
     "tailwindcss": "^3.4.10",
     "vue": "latest",
     "zod": "^3.23.8"
