--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "semi": false,
   "tabWidth": 2,
   "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "singleAttributePerLine": true
 }
